--- a/style.css
+++ b/style.css
@@ -1,10 +1,34 @@
+body{
+    background-image: url("image copy.png");
+    background-size: cover;
+}
+
+.container{
+    width: 20%;
+    height: 100px;
+    margin: auto;
+    margin-top: 15%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+
+}
+h1{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 button{
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
     background-color: goldenrod;
     width: 110px;
     height: 50px;
     border-radius: 10px;
 }
 input{
+    margin-top: 10px;
     width: 400px;
     height: 70px;
 }
