--- a/style.css
+++ b/style.css
@@ -31,4 +31,26 @@ input{
     margin-top: 10px;
     width: 400px;
     height: 70px;
+    border-radius: 10px;
+}
+
+.resultado{
+    width: 100%;
+    height: 300px;
+    background-color: cornflowerblue;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
+.resultadoProximo{
+    width: 100%;
+    height: 300px;
+    background-color: cornflowerblue;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
 }
